--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/html-pdf": "^3.0.3",
     "@types/jspdf": "^1.3.3",
+    "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
     "html-pdf": "^3.0.1",
     "jspdf": "^2.5.2",
