--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@types/html-pdf": "^3.0.3",
     "@types/jspdf": "^1.3.3",
     "dotenv": "^16.4.5",
