--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fastify/cors": "^10.0.1",
     "@types/html-pdf": "^3.0.3",
     "@types/jspdf": "^1.3.3",
+    "@types/node-cron": "^3.0.11",
     "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
     "html-pdf": "^3.0.1",
     "jspdf": "^2.5.2",
+    "node-cron": "^3.0.3",
     "puppeteer": "^23.7.1",
     "tsup": "^8.3.5",
     "zod": "^3.23.8"
